# IntFold

./: LICENSE  NOTICE  README.md  convert_ifv2_to_jax.py  download_cache_data.sh  download_template_data.sh  environment.yaml  predict.sh  pyproject.toml  run_intellifold.py  setup.py
docs/: input_yaml_format.md  installation.md  usage.md
examples/: 5S8I_A_wtemplate.yaml
examples/templates/: 5s8i_A_0_hmmsearch.a3m
intellifold/: __init__.py  af3_schema.pkl  cli.py  convert.py  parallel.py  patches.py  run_jax_inference.py  weights.py
intellifold/data/: const.py  types.py
intellifold/data/inference/: data_tools.py  params.py  utils.py
intellifold/data/module/: inference.py
intellifold/data/parse/: schema.py
intellifold/data/template/: template_featurizer.py  template_parser.py  template_realign.py  template_utils.py
intellifold/data/tools/: kalign.py  logger.py  search.py
intellifold/openfold/: v2_flash_inference_config.py  v2_inference_config.py
intellifold/openfold/model/: diffusion.py  embedders.py  model.py  pairformer.py
intellifold/openfold/utils/: atom_token_conversion.py
pypi/: intellifold-2.0.0-py3-none-any.whl  intellifold-2.0.2-py3-none-any.whl
runner/: intellifold_inference.py  run_templates_search.py
